--- a/README
+++ b/README
@@ -7,3 +7,9 @@ Filelist
 ========
 docs/
   Documentation
+
+links.txt
+  Unix-like computer operating systems related links
+
+nix.txt
+  Unix-like computer operating systems
