--- a/docs/README
+++ b/docs/README
@@ -5,3 +5,7 @@ Copyright (C) 2018 by Raymond E. Marcil <marcilr@gmail.com>
 
 Filelist
 ========
+nixcraft.txt
+  nixCraft
+  Linux Tips, Hacks, And Ideas in Blog Format
+
